Fixed button contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ h1 {
 
 .button_styling {
   background-color: rgb(32, 160, 245);
-  color: white;
+  color:#0c271d;
 }
 
 .parent_2_inner {
